--- a/packages/react-firebase-query-hooks/package.json
+++ b/packages/react-firebase-query-hooks/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-firebase-query-hooks",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "",
 	"main": "index.ts",
 	"scripts": {},
@@ -22,6 +22,11 @@
 		"@tanstack/react-query": "^5.48.0",
 		"firebase": "^9.23.0",
 		"lodash": "^4.17.21",
-		"react": "^18.3.1"
+		"react": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.6",
+		"@types/react": "~18.2.79",
+		"typescript": "~5.3.3"
 	}
 }
